--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
               <div class="skill-percent">70%</div>
               <div class="skillbar" style="width: 70%"></div>
             </div>
+            <div class="skill">
+              <div class="skill-title">PHP</div>
+              <div class="skill-percent">99%</div>
+              <div class="skillbar" style="width: 70%"></div>
+            </div>
           </div>
         </div>
         <div class="services-row">
