--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="services-row">
           <div class="service-card" data-aos="fade-down">
             <img class="service-card-img" src="img/services/01.svg" alt="" />
-            <h3 class="service-card-title">UI/UX Design</h3>
+            <h3 class="service-card-title">Website Development</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
               ullam, ipsum magnam expedita animi unde sapiente dolore alias
@@ -167,7 +167,7 @@
 
           <div class="service-card" data-aos="fade-down">
             <img class="service-card-img" src="img/services/02.svg" alt="" />
-            <h3 class="service-card-title">Frontend Development</h3>
+            <h3 class="service-card-title">Software Development</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
               ullam, ipsum magnam expedita animi unde sapiente dolore alias
@@ -178,7 +178,7 @@
 
           <div class="service-card" data-aos="fade-down">
             <img class="service-card-img" src="img/services/03.svg" alt="" />
-            <h3 class="service-card-title">Web Development</h3>
+            <h3 class="service-card-title">Mobile App Development</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
               ullam, ipsum magnam expedita animi unde sapiente dolore alias
