service name update

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
         <div class="services-row">
           <div class="service-card" data-aos="fade-down">
-            <img class="service-card-img" src="img/services/01.svg" alt="" />
+            <img class="service-card-img" src="assets/images/world-wide-web.png" alt="" />
             <h3 class="service-card-title">Website Development</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
@@ -166,7 +166,7 @@
           </div>
 
           <div class="service-card" data-aos="fade-down">
-            <img class="service-card-img" src="img/services/02.svg" alt="" />
+            <img class="service-card-img" src="assets/images/web-development.png" alt="" />
             <h3 class="service-card-title">Software Development</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
@@ -177,7 +177,7 @@
           </div>
 
           <div class="service-card" data-aos="fade-down">
-            <img class="service-card-img" src="img/services/03.svg" alt="" />
+            <img class="service-card-img" src="assets/images/app-development.png" alt="" />
             <h3 class="service-card-title">Mobile App Development</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
