social link added

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
             >
             <div class="about-social-list">
               <div class="social-links-row">
-                <a href="#!">
+                <a href="https://github.com/mdaliakbarbio" target="_blank">
                   <img
                     src="img/social_icons/github.svg"
                     alt="Link to GitHub account"
                   />
                 </a>
-                <a href="#!">
+                <a href="https://www.linkedin.com/in/akbar-programmer/" target="_blank">
                   <img
                     src="img/social_icons/linkedin.svg"
                     alt="Link to linkedin profile"
                   />
                 </a>
-                <a href="#!">
+                <a href="https://www.facebook.com/programmerakbar" target="_blank">
                   <img
                     src="img/social_icons/facebook.svg"
                     alt="Link to facebook profile"
@@ -311,14 +311,14 @@
       <div class="container">
         <div class="footer-row">
           <div class="social-links-row footer-social">
-            <a href="#!">
+            <a href="https://github.com/mdaliakbarbio" target="_blank">
               <img
                 src="img/social_icons/github.svg"
                 alt="Link to GitHub account"
               />
             </a>
 
-            <a href="#!">
+            <a href="https://www.linkedin.com/in/akbar-programmer/" target="_blank">
               <img
                 src="img/social_icons/linkedin.svg"
                 alt="Link to linkedin profile"
@@ -327,7 +327,7 @@
 
            
 
-            <a href="#!">
+            <a href="https://www.facebook.com/programmerakbar" target="_blank">
               <img
                 src="img/social_icons/facebook.svg"
                 alt="Link to facebook profile"
