--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <span class="hero-greeting"> Hello, I am</span>
             <h1 class="hero-heading">Ali Akbar</h1>
             <span class="hero-heading-subtitle"
-              >UI/UX Designer & Software Developer</span
+              >Software Engineer</span
             >
             <div class="about-social-list">
               <div class="social-links-row">
@@ -111,14 +111,14 @@
         <div class="about-row">
           <div class="about-content">
             <p class="about-descr">
-              I am creative UI/UX Designer & Software Developer from Bangladesh.
+              I am Software Engineer from Bangladesh.
               I enjoy turning complex problems into simple, beautiful and intuitive designs. <br />
               <br />
-              My job is to build your website so that it is functional and user-friendly but at the same time attractive. Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way. I created web design for many famous brand companies.
+              My job is to build your website, develop software so that it is functional and user-friendly but at the same time attractive. Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way. I created web design for many famous brand companies.
             </p>
-            <div class="about-download-btn">
+            <!-- <div class="about-download-btn">
               <a href="#!" class="btn btn-white">Download CV</a>
-            </div>
+            </div> -->
           </div>
           <div class="about-skills">
             <div class="skill">
@@ -337,7 +337,7 @@
           </div>
 
           <div class="footer-copyright">
-            <p>&copy; Copyright Ali Akbar 2024</p>
+            <p>&copy; Copyright Ali Akbar <script>document.write(new Date().getFullYear())</script></p>
           </div>
         </div>
       </div>
