--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <header id="header" class="header">
     <div class="container container-lg">
       <div class="header-nav">
-        <a href="#home" class="logo">Ali <span></span>Akbar</a>
+        <a href="/" class="logo">Ali <span></span>Akbar</a>
         <nav id="nav" class="nav">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="#home" class="nav-link active">Home</a>
+              <a href="/" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
               <a href="#about" class="nav-link">About</a>
