--- a/index.html
+++ b/index.html
@@ -102,18 +102,29 @@
         </div>
         <div class="about-skills">
           <div class="skill">
+            <div class="skill-title">PHP</div>
+            <div class="skill-percent">99%</div>
+            <div class="skillbar" style="width: 99%"></div>
+          </div>
+      
+          <div class="skill">
             <div class="skill-title">Web design</div>
-            <div class="skill-percent">95%</div>
+            <div class="skill-percent">99%</div>
             <div class="skillbar" style="width: 95%"></div>
           </div>
           <div class="skill">
             <div class="skill-title">HTML/CSS</div>
-            <div class="skill-percent">90%</div>
+            <div class="skill-percent">99%</div>
             <div class="skillbar" style="width: 90%"></div>
+          </div>
+              <div class="skill">
+            <div class="skill-title">Flutter</div>
+            <div class="skill-percent">85%</div>
+            <div class="skillbar" style="width: 99%"></div>
           </div>
           <div class="skill">
             <div class="skill-title">JavaScript</div>
-            <div class="skill-percent">65%</div>
+            <div class="skill-percent">98%</div>
             <div class="skillbar" style="width: 65%"></div>
           </div>
           <div class="skill">
@@ -126,16 +137,11 @@
             <div class="skill-percent">70%</div>
             <div class="skillbar" style="width: 70%"></div>
           </div>
-          <div class="skill">
-            <div class="skill-title">PHP</div>
-            <div class="skill-percent">99%</div>
-            <div class="skillbar" style="width: 99%"></div>
-          </div>
         </div>
       </div>
       <div class="services-row">
         <div class="service-card" data-aos="fade-down">
-          <img class="service-card-img" src="assets/images/world-wide-web.png" alt="" />
+          <img class="service-card-img" src="img/world-wide-web.png" alt="" />
           <h3 class="service-card-title">Website Development</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
@@ -146,7 +152,7 @@
         </div>
 
         <div class="service-card" data-aos="fade-down">
-          <img class="service-card-img" src="assets/images/web-development.png" alt="" />
+          <img class="service-card-img" src="img/web-development.png" alt="" />
           <h3 class="service-card-title">Software Development</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
@@ -157,7 +163,7 @@
         </div>
 
         <div class="service-card" data-aos="fade-down">
-          <img class="service-card-img" src="assets/images/app-development.png" alt="" />
+          <img class="service-card-img" src="img/app-development.png" alt="" />
           <h3 class="service-card-title">Mobile App Development</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
