--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
   <header id="header" class="header">
     <div class="container container-lg">
       <div class="header-nav">
-        <a href="/" class="logo">Ali <span></span>Akbar</a>
+       
         <nav id="nav" class="nav">
           <ul class="nav-list">
             <li class="nav-item">
               <a href="/" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="#projects" class="nav-link">Works</a>
+              <a href="#projects" class="nav-link">Portfolio</a>
             </li>
             <li class="nav-item">
               <a href="#contact" class="nav-link">Contact</a>
@@ -52,28 +49,21 @@
   <section id="home" class="hero">
     <div class="container container-lg">
       <div data-aos="fade-zoom-in" data-aos-easing="ease-in-out" data-aos-delay="1800" data-aos-duration="2000">
+
         <div class="hero-content">
-          <span class="hero-greeting"> Hello, I am</span>
-          <h1 class="hero-heading">Ali Akbar</h1>
-          <span class="hero-heading-subtitle">Software Engineer</span>
-          <div class="about-social-list">
-            <div class="social-links-row">
-              <a href="https://github.com/mdaliakbarbio" target="_blank">
-                <img src="img/social_icons/github.svg" alt="Link to GitHub account" />
-              </a>
-              <a href="https://www.linkedin.com/in/akbar-programmer/" target="_blank">
-                <img src="img/social_icons/linkedin.svg" alt="Link to linkedin profile" />
-              </a>
-              <a href="https://www.facebook.com/programmerakbar" target="_blank">
-                <img src="img/social_icons/facebook.svg" alt="Link to facebook profile" /></a>
+          <div style="display: flex; align-items: center;">
 
+            <div style=" flex: 60%;">
+              <span class="hero-greeting"> Hello, I am</span>
+              <h1 class="hero-heading">Ali Akbar</h1>
+              <span class="hero-heading-subtitle">Software Engineer</span>
             </div>
+            <div style="flex: 40%; text-align: left;"> <img src="img/akbar.png" style="width: 40%;  "></div>
           </div>
 
-          <div>
-            <a href="#projects" class="btn">My Portfolio</a>
-            <a href="#contact" class="btn btn-white">Contact Me</a>
-          </div>
+
+
+
         </div>
 
       </div>
@@ -88,7 +78,7 @@
       <div class="about-row">
         <div class="about-content">
           <p class="about-descr">
-            I am Software Engineer from Bangladesh.
+            I am a Software Engineer from Bangladesh.
             I enjoy turning complex problems into simple, beautiful and intuitive designs. <br />
             <br />
             My job is to build your website, develop software so that it is functional and user-friendly but at the same
@@ -96,9 +86,6 @@
             to use. My aim is to bring across your message and identity in the most creative way. I created web design
             for many famous brand companies.
           </p>
-          <!-- <div class="about-download-btn">
-              <a href="#!" class="btn btn-white">Download CV</a>
-            </div> -->
         </div>
         <div class="about-skills">
           <div class="skill">
@@ -107,7 +94,7 @@
             <div class="skillbar" style="width: 99%"></div>
           </div>
 
-        
+
           <div class="skill">
             <div class="skill-title">Flutter</div>
             <div class="skill-percent">85%</div>
@@ -135,10 +122,7 @@
           <img class="service-card-img" src="img/world-wide-web.png" alt="" />
           <h3 class="service-card-title">Website Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
-            ullam, ipsum magnam expedita animi unde sapiente dolore alias
-            provident inventore, ut itaque aliquid ex eos deleniti laborum
-            nesciunt natus.
+           I build modern, responsive, and high-performance websites using React, Tailwind CSS, and industry-standard development practices. I focus on clean architecture, reusable components, and smooth user experiences.
           </p>
         </div>
 
@@ -146,10 +130,7 @@
           <img class="service-card-img" src="img/web-development.png" alt="" />
           <h3 class="service-card-title">Software Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
-            ullam, ipsum magnam expedita animi unde sapiente dolore alias
-            provident inventore, ut itaque aliquid ex eos deleniti laborum
-            nesciunt natus.
+           Skilled in full-stack software development using Laravel, Node.js, MySQL, and C#, delivering scalable, secure, and high-performance applications with clean architecture and efficient backend logic.
           </p>
         </div>
 
@@ -157,10 +138,7 @@
           <img class="service-card-img" src="img/app-development.png" alt="" />
           <h3 class="service-card-title">Mobile App Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio
-            ullam, ipsum magnam expedita animi unde sapiente dolore alias
-            provident inventore, ut itaque aliquid ex eos deleniti laborum
-            nesciunt natus.
+            Experienced in mobile app development using Flutter and Dart, creating fast, responsive, and visually engaging cross-platform apps with clean UI and optimized performance.
           </p>
         </div>
       </div>
@@ -170,76 +148,48 @@
   <section id="projects" class="projects">
     <div class="container container-lg">
       <div class="projects-title">
-        <h2 class="title">Works</h2>
+        <h2 class="title">Portfolio</h2>
       </div>
 
-      <div class="projects-row">
-        <div class="project-box">
-          <a href="#!">
-            <img class="project-img" src="img/works/01.jpg" alt="" />
-            <div class="project-mask">
-              <div class="project-caption">
-                <h5 class="white">Finance Dashboard</h5>
-                <p class="white">UI/UX Design</p>
-              </div>
-            </div>
-          </a>
+      <div class="services-row">
+        <div class="service-card" data-aos="fade-down">
+          <h3 class="service-card-title">Network Anomoly Detection on ML</h3>
+          <p>
+            Anomaly detection in network using KNN algorithm and Decision Tree Classifier, here dataset used from Kaggle, which is a well-known dataset for anomaly detection with contains 5000 rows and 35 column in total and got 90% accuracy.
+          </p>
+          <div style="text-align: center; font-size: 14px; margin-top: 20px;">
+            <span class="repo-language-color" style="background-color: red;"></span> Pyhton
+            <span class="repo-language-color" style="background-color: yellow;"></span> ML
+            <span class="repo-language-color" style="background-color: green;"></span> SMOTE
+          </div>
         </div>
-        <div class="project-box">
-          <a href="#!">
-            <img class="project-img" src="img/works/02.jpg" alt="" />
-            <div class="project-mask">
-              <div class="project-caption">
-                <h5 class="white">Product design</h5>
-                <p class="white">UI/UX Design</p>
-              </div>
-            </div>
-          </a>
+
+        <div class="service-card" data-aos="fade-down">
+          <h3 class="service-card-title">Garbage Classification on CNN</h3>
+          <p>
+            Garbage Classification using Transfer Learning ResNet101V2 and MobileNetV2 to classify waste images into categories. To compare performance between these two powerful models got accuracy comparison: ResNet101V2: 92.30%, MobileNetV2: 92.02%
+          </p>
+           <div style="text-align: center; font-size: 14px; margin-top: 20px;">
+            <span class="repo-language-color" style="background-color: red;"></span> Pyhton
+            <span class="repo-language-color" style="background-color: yellow;"></span> CNN
+            <span class="repo-language-color" style="background-color: purple;"></span> ResNet101V2
+            <span class="repo-language-color" style="background-color: green;"></span> MobileNetV2
+          </div>
         </div>
-        <div class="project-box">
-          <a href="#!">
-            <img class="project-img" src="img/works/03.jpg" alt="" />
-            <div class="project-mask">
-              <div class="project-caption">
-                <h5 class="white">Landing Page</h5>
-                <p class="white">UI/UX Design, Web Development</p>
-              </div>
-            </div>
-          </a>
+
+        <div class="service-card" data-aos="fade-down">
+          <h3 class="service-card-title">Expense Management</h3>
+          <p>
+            Daily expense, income, loan can manages using this android application.
+            Daily, monthly and yearly report generate and vasualization in graphical interface.
+          </p>
+           <div style="text-align: center; font-size: 14px; margin-top: 20px;">
+            <span class="repo-language-color" style="background-color: teal;"></span> Flutter
+            <span class="repo-language-color" style="background-color: skyblue;"></span> Dart
+            <span class="repo-language-color" style="background-color: green;"></span> Sqlite
+          </div>
         </div>
-        <div class="project-box">
-          <a href="#!">
-            <img class="project-img" src="img/works/04.jpg" alt="" />
-            <div class="project-mask">
-              <div class="project-caption">
-                <h5 class="white">Portfolio</h5>
-                <p class="white">Web Development</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="project-box">
-          <a href="#!">
-            <img class="project-img" src="img/works/05.jpg" alt="" />
-            <div class="project-mask">
-              <div class="project-caption">
-                <h5 class="white">Cosmic Sea</h5>
-                <p class="white">UI/UX Design, Web Development</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="project-box">
-          <a href="#!">
-            <img class="project-img" src="img/works/06.jpg" alt="" />
-            <div class="project-mask">
-              <div class="project-caption">
-                <h5 class="white">eCommerce</h5>
-                <p class="white">Web Development</p>
-              </div>
-            </div>
-          </a>
-        </div>
+
       </div>
     </div>
   </section>
