portfolio link update

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
             <span class="repo-language-color" style="background-color: yellow;"></span> ML
             <span class="repo-language-color" style="background-color: green;"></span> SMOTE
           </div>
+           <div style="text-align: right; font-size: 14px; margin-top: 10px;">
+            <a href="https://github.com/mdaliakbarbio/Network-Anomoly-Detection" target="_blank" style="color:black"><img src="img/world-wide-web.png" width="15" style="margin-top: 3px;"> GitHub</a> 
+          </div>
         </div>
 
         <div class="service-card" data-aos="fade-down">
@@ -174,6 +177,9 @@
             <span class="repo-language-color" style="background-color: yellow;"></span> CNN
             <span class="repo-language-color" style="background-color: purple;"></span> ResNet101V2
             <span class="repo-language-color" style="background-color: green;"></span> MobileNetV2
+          </div>
+           <div style="text-align: right; font-size: 14px; margin-top: 10px;">
+            <a href="https://www.kaggle.com/code/aliakbarhello/garbage-classification-resnet101v2-mobilenet" target="_blank" style="color:black"><img src="img/world-wide-web.png" width="15" style="margin-top: 3px;"> Kaggle</a> 
           </div>
         </div>
 
