--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ali Akbar - Software Engineer</title>
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/main.css?v=1001" />
   <link rel="stylesheet" href="css/media.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
     integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
@@ -25,7 +25,7 @@
   <header id="header" class="header">
     <div class="container container-lg">
       <div class="header-nav">
-       
+
         <nav id="nav" class="nav">
           <ul class="nav-list">
             <li class="nav-item">
@@ -122,7 +122,8 @@
           <img class="service-card-img" src="img/world-wide-web.png" alt="" />
           <h3 class="service-card-title">Website Development</h3>
           <p>
-           I build modern, responsive, and high-performance websites using React, Tailwind CSS, and industry-standard development practices. I focus on clean architecture, reusable components, and smooth user experiences.
+            I build modern, responsive, and high-performance websites using React, Tailwind CSS, and industry-standard
+            development practices. I focus on clean architecture, reusable components, and smooth user experiences.
           </p>
         </div>
 
@@ -130,7 +131,8 @@
           <img class="service-card-img" src="img/web-development.png" alt="" />
           <h3 class="service-card-title">Software Development</h3>
           <p>
-           Skilled in full-stack software development using Laravel, Node.js, MySQL, and C#, delivering scalable, secure, and high-performance applications with clean architecture and efficient backend logic.
+            Skilled in full-stack software development using Laravel, Node.js, MySQL, and C#, delivering scalable,
+            secure, and high-performance applications with clean architecture and efficient backend logic.
           </p>
         </div>
 
@@ -138,7 +140,8 @@
           <img class="service-card-img" src="img/app-development.png" alt="" />
           <h3 class="service-card-title">Mobile App Development</h3>
           <p>
-            Experienced in mobile app development using Flutter and Dart, creating fast, responsive, and visually engaging cross-platform apps with clean UI and optimized performance.
+            Experienced in mobile app development using Flutter and Dart, creating fast, responsive, and visually
+            engaging cross-platform apps with clean UI and optimized performance.
           </p>
         </div>
       </div>
@@ -155,41 +158,48 @@
         <div class="service-card" data-aos="fade-down">
           <h3 class="service-card-title">Network Anomoly Detection on ML</h3>
           <p>
-            Anomaly detection in network using KNN algorithm and Decision Tree Classifier, here dataset used from Kaggle, which is a well-known dataset for anomaly detection with contains 5000 rows and 35 column in total and got 90% accuracy.
+            Anomaly detection in network using KNN algorithm and Decision Tree Classifier, here dataset used from
+            Kaggle, which is a well-known dataset for anomaly detection with contains 5000 rows and 35 column in total
+            and got 90% accuracy.
           </p>
           <div style="text-align: center; font-size: 14px; margin-top: 20px;">
             <span class="repo-language-color" style="background-color: red;"></span> Pyhton
             <span class="repo-language-color" style="background-color: yellow;"></span> ML
             <span class="repo-language-color" style="background-color: green;"></span> SMOTE
           </div>
-           <div style="text-align: right; font-size: 14px; margin-top: 10px;">
-            <a href="https://github.com/mdaliakbarbio/Network-Anomoly-Detection" target="_blank" style="color:black"><img src="img/world-wide-web.png" width="15" style="margin-top: 3px;"> GitHub</a> 
+          <div style="text-align: right; font-size: 14px; margin-top: 10px;">
+            <a href="https://github.com/mdaliakbarbio/Network-Anomoly-Detection" target="_blank"
+              style="color:black"><img src="img/world-wide-web.png" width="15" style="margin-top: 3px;"> GitHub</a>
           </div>
         </div>
 
         <div class="service-card" data-aos="fade-down">
           <h3 class="service-card-title">Garbage Classification on CNN</h3>
           <p>
-            Garbage Classification using Transfer Learning ResNet101V2 and MobileNetV2 to classify waste images into categories. To compare performance between these two powerful models got accuracy comparison: ResNet101V2: 92.30%, MobileNetV2: 92.02%
+            Garbage Classification using Transfer Learning ResNet101V2 and MobileNetV2 to classify waste images into
+            categories. To compare performance between these two powerful models got accuracy comparison: ResNet101V2:
+            92.30%, MobileNetV2: 92.02%
           </p>
-           <div style="text-align: center; font-size: 14px; margin-top: 20px;">
+          <div style="text-align: center; font-size: 14px; margin-top: 20px;">
             <span class="repo-language-color" style="background-color: red;"></span> Pyhton
             <span class="repo-language-color" style="background-color: yellow;"></span> CNN
             <span class="repo-language-color" style="background-color: purple;"></span> ResNet101V2
             <span class="repo-language-color" style="background-color: green;"></span> MobileNetV2
           </div>
-           <div style="text-align: right; font-size: 14px; margin-top: 10px;">
-            <a href="https://www.kaggle.com/code/aliakbarhello/garbage-classification-resnet101v2-mobilenet" target="_blank" style="color:black"><img src="img/world-wide-web.png" width="15" style="margin-top: 3px;"> Kaggle</a> 
+          <div style="text-align: right; font-size: 14px; margin-top: 10px;">
+            <a href="https://www.kaggle.com/code/aliakbarhello/garbage-classification-resnet101v2-mobilenet"
+              target="_blank" style="color:black"><img src="img/world-wide-web.png" width="15" style="margin-top: 3px;">
+              Kaggle</a>
           </div>
         </div>
 
         <div class="service-card" data-aos="fade-down">
           <h3 class="service-card-title">Expense Management</h3>
           <p>
-            Daily expense, income, loan can manages using this android application.
-            Daily, monthly and yearly report generate and vasualization in graphical interface.
+            Daily expense, income, loan and personal assets can manages using this android application.
+            Daily, monthly and yearly statement generate, monitor and vasualization in graphical report.
           </p>
-           <div style="text-align: center; font-size: 14px; margin-top: 20px;">
+          <div style="text-align: center; font-size: 14px; margin-top: 20px;">
             <span class="repo-language-color" style="background-color: teal;"></span> Flutter
             <span class="repo-language-color" style="background-color: skyblue;"></span> Dart
             <span class="repo-language-color" style="background-color: green;"></span> Sqlite
@@ -267,7 +277,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
     integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js?v=1001"></script>
 </body>
 
 </html>
